# practice_file_server

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  server.c
src/client/: CMakeLists.txt  client.c  client.h
src/common/: CMakeLists.txt  job.c  job.h  meta_filelist.py  python_caller.c  python_caller.h
src/server/: CMakeLists.txt  server.c  server_cthr.c  server_cthr.h  server_ithr.c  server_ithr.h  server_wthr.c  server_wthr.h
